dev: fix little issue with vertical spacing in footer

--- a/app/assets/sass/components/_footer.scss
+++ b/app/assets/sass/components/_footer.scss
@@ -24,7 +24,7 @@ footer {
 
     .footer-menu ul {
       display: flex;
-      margin-bottom: 0;
+      margin: 0;
 
       li {
         padding-left: 1.5em;
